- Join commands are no longer stored in a file, and can now be edited through the GUI